tests/check/tile_one.co
// RUN: choreo %s -es -o - 2>&1 |FileCheck %s

#define EE 1
#define CC 1
__co__ auto transpose(s32 [4, 2, CC, 8, EE] input) {

  s32[input.span[(2), (3), (0), (4), (1)]] output;

  parallel p by CC {
    local s32[output.span] t{-1};
    dma.copy t => output;
    with {e} in input.span[(4)] {
      local s32[output.span[1, (1), (2), 1, (4)]] ttt{0};
      dma.copy ttt => output.chunkat(p, _, _, e, _);
    }
  }
  return output;
}

// CHECK-NOT: error:
